# poexam

./: .gitignore  .markdownlint.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  REUSE.toml
.github/workflows/: ci.yml  reuse.yml
editors/zed/: .gitignore  Cargo.toml  README.md  extension.toml
editors/zed/languages/po/: config.toml  highlights.scm
editors/zed/src/: lib.rs
examples/: en_US.dic  fr.dic  fr.po  poexam.toml
resources/test/: en_US.dic  fr.dic  fr_compilation_error.po  fr_compilation_ok.po
src/: args.rs  c_format.rs  checker.rs  config.rs  diagnostic.rs  dict.rs  dir.rs  fix.rs  highlight.rs  lsp.rs  main.rs  result.rs  sarif.rs  stats.rs  table.rs  url_pos.rs  word_pos.rs  words.rs
src/po/: entry.rs  escape.rs  message.rs  mod.rs  parser.rs  wrap.rs  writer.rs
src/po/format/: char_pos.rs  format_pos.rs  iter.rs  iterators.rs  lang_c.rs  lang_java.rs  lang_null.rs  lang_python.rs  language.rs  mod.rs  url_pos.rs  word_pos.rs
src/rules/: accelerators.rs  acronyms.rs  blank.rs  brackets.rs  c_formats.rs  changed.rs  compilation.rs  double_quotes.rs  double_spaces.rs  double_words.rs  emails.rs  encoding.rs  escapes.rs  force_trans.rs  formats.rs  functions.rs  fuzzy.rs  header.rs  html_tags.rs  long.rs  mod.rs  newlines.rs  no_trans.rs  noqa.rs  obsolete.rs  paths.rs  pipes.rs  plurals.rs  punc.rs  punc_space.rs  rule.rs  short.rs  spelling.rs  tabs.rs  unchanged.rs  unicode_ctrl.rs  untranslated.rs  urls.rs  whitespace.rs
tools/: release.sh
