# SPDX-FileCopyrightText: 2026 Sébastien Helleu <flashcode@flashtux.org>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "poexam"
version = "0.0.9"
authors = ["Sébastien Helleu <flashcode@flashtux.org>"]
edition = "2024"
rust-version = "1.87"
description = "Blazingly fast PO linter."
exclude = ["resources/test/", "examples/"]
documentation = "https://docs.rs/poexam/"
readme = "README.md"
homepage = "https://github.com/poexam/poexam"
repository = "https://github.com/poexam/poexam"
license = "GPL-3.0-or-later"
keywords = ["gettext", "po", "linter"]
categories = [
    "command-line-utilities",
    "development-tools",
    "internationalization",
]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
encoding_rs = "0.8.35"
ignore = "0.4.25"
memchr = "2.7.6"
path-absolutize = { version = "3.1.1", features = ["once_cell_cache"] }
rayon = "1.11.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
spellbook = "0.4.0"
toml = "1.0.1"

[profile.release]
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
enum_glob_use = "warn"
clone_on_ref_ptr = "warn"
needless_pass_by_value = "warn"
implicit_clone = "warn"
redundant_closure_for_method_calls = "warn"
dbg_macro = "warn"
todo = "warn"
