# SPDX-FileCopyrightText: 2026 Sébastien Helleu <flashcode@flashtux.org>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "zed_poexam"
version = "0.0.1"
authors = ["Sébastien Helleu <flashcode@flashtux.org>"]
edition = "2024"
description = "Zed extension for poexam: real-time PO (gettext) linting and syntax highlighting."
license = "GPL-3.0-or-later"
repository = "https://github.com/poexam/poexam"
keywords = ["gettext", "po", "linter", "zed", "extension"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7"
